# goit_py_web_hw_8

./: pyproject.toml
mongo/: db_connect.py  main.py  models.py  seeds.py
rabbitmq/: config.ini  consumer_email.py  consumer_sms.py  docker-compose.yaml  models.py  producer.py
