[tool.poetry]
name = "goit-py-web-hw-8"
version = "0.1.0"
description = ""
authors = ["Yaroslav Kubitskyi <fenixm22@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
mongoengine = "^0.28.2"
faker = "^27.0.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
